@@ -3,6 +3,7 @@
 	* First svn commit !
 	* bugfix: rename setkey in wzd_crypt to avoid conflict in NetBSD
 	* bugfix: send error to log if server can't create pid file
+	* bugfix: send error to stderr if server can't open log file
 	* bugfix: really disable MLST and MLSD
 
 2005-05-18  Pierre Chifflier  <pollux@wzdftpd.net>
